fix: 优化管理员日志接口 (#80)
* feat： 获取提案搜索建议

* feat: 完善 changelog 功能对接提案审批

* fix: Remove meowpick targets from Makefile

* feat: 新增 IsAdmin 方法

* fix: 新增模糊查询教师搜索建议

* chore(ci): auto-generate swagger & license [skip ci]

* feat: 新增授予管理员功能

* feat: 登陆返回是否是管理员

* feat： 获取提案搜索建议

* fix: 为 ApproveProposal 接口添加 swagger tag

* feat: 实现管理员日志接口

* feat: 实现提案日志双视图接口

* fix: 优化管理员日志接口

---------
